--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "prettier": "^1.19.1",
-    "protractor": "~5.4.0",
     "prettier-tslint": "^0.4.2",
+    "protractor": "~5.4.0",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
