--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
@@ -23,7 +25,7 @@
       "@shared/*": ["./src/app/shared/*"],
       "@services/*": ["./src/app/core/services/*"],
       "@core/*": ["./src/app/core/*"],
-      "@assets/*": ["./src/assets/*"],
+      "@assets/*": ["./src/assets/*"]
     }
   },
   "angularCompilerOptions": {
