--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
+    "jquery": "^3.4.1",
     "ng4-social-login": "^1.4.2",
     "ngx-image-zoom": "^0.3.4",
     "prettier-tslint": "^0.4.2",
@@ -44,6 +45,7 @@
     "@angular/language-service": "~8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.34",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
