--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-rc.5",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "ng4-social-login": "^1.4.2",
     "ngx-image-zoom": "^0.3.4",
     "prettier-tslint": "^0.4.2",
