--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "install": "^0.13.0",
-    "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "ng4-social-login": "^1.4.2",
     "ngx-image-zoom": "^0.3.4",
@@ -76,8 +75,12 @@
     "prettier-tslint": "^0.4.2",
     "protractor": "~5.4.0",
     "rxjs-tslint": "^0.1.7",
+    "stylelint": "^13.3.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
+  },
+  "optionalDependencies": {
+    "webpack-bundle-analyzer": "^3.6.1"
   }
 }
