--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Kaushal Shah",
     "email": "kaushalshah589@gmail.com",
-    "url": "https://in.linkedin.com/company/pmc_1"
+    "url": "hhttps://www.linkedin.com/in/kaushal-shah-a93364142/"
   },
   "scripts": {
     "ng": "ng",
