--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint:ci": "npm run format:check",
-    "lint:fix": "ng lint global-portal --fix",
+    "lint:fix": "ng lint SHOPX --fix",
     "lint:styles": "stylelint ./src/**/*.scss",
     "lint-fix": "tslint --fix --project tsconfig.json --format stylish",
     "e2e": "ng e2e",
@@ -59,9 +59,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.23",
-    "@angular/cli": "~8.3.23",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "~8.2.3",
+    "@angular/language-service": "~8.2.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.34",
